# virtual-dummies

./: .gitignore  CMakeLists.txt  README.md  benchmark_merge.py  benchmark_worker.py  generate_phenotype.py  hapnest_benchmark.py  pyproject.toml  submit_benchmarks.sh  test.ipynb
experiments/: AD_LARS.py  EXPERIMENTS_README.md  fig3_distributional_equivalence.py  fig4_fdr_control_vd_vs_ad.py  fig5_universality_diagnostics.py  fig6_spherical_vs_gaussian.py  fig7_memory_runtime_benchmark.cpp  helpers.pyx  requirements-experiments.txt  setup.py
experiments/hapnest_scripts/: hapnest_README.md  requirements-hapnest.txt
experiments/hapnest_scripts/0_slurm/: submit_benchmarks.sh  submit_full_bh_hd.sh  submit_full_bh_stream.sh  submit_full_by_hd.sh  submit_full_by_stream.sh  submit_full_ko_hd.sh
experiments/hapnest_scripts/1_hapnest_generation/: config_100k_template.yaml  slurm_geno_chr.sh  submit_all_runs.sh
experiments/hapnest_scripts/2_preprocessing/: preprocess_hapnest_full.py  preprocess_hapnest_small.py  run_preprocess_full.sh  run_preprocess_small.sh
experiments/hapnest_scripts/3_4_benchmark/: benchmark_allmethod_worker.py  benchmark_merge.py  benchmark_worker.py  generate_phenotype.py
experiments/results/fig3_distributional_equivalence/: meta.json
experiments/results/fig4_fdr_control/data/: meta.json  summary.csv
experiments/results/fig5_universality_diagnostics/: config.json  meta.json  summary.json
experiments/results/fig6_sph_vs_gau/: meta.json  surfaces_L10p.npz  surfaces_L20p.npz  surfaces_L5p.npz
experiments/results/fig7_memory_runtime_benchmarksignal_n1000/: meta.json  raw.csv
experiments/tlars_core/src/: TLARS_Solver.cpp  TLARS_Solver.hpp  arma_cereal.hpp
src/: bindings.cpp  memory_mapped_eigen_matrix.hpp  trex.cpp  trex.hpp  vd_afs.cpp  vd_afs.hpp  vd_afs_logistic.cpp  vd_afs_logistic.hpp  vd_base.cpp  vd_base.hpp  vd_common.hpp  vd_lars.cpp  vd_lars.hpp  vd_omp.cpp  vd_omp.hpp
vd_selectors/: __init__.py
